--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.web.cal</groupId>
   <artifactId>WebAppCal</artifactId>
   <packaging>war</packaging>
-  <version>0.0.3</version>
+  <version>0.2.</version>
   <name>WebAppCal Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -24,7 +24,7 @@
 <distributionManagement>
   <repository>
     <id>releases</id>
-        <url>http://3.134.77.20:8081/nexus/content/repositories/releases</url>
+       <url>http://18.223.188.180:8081/nexus/content/repositories/releases</url>
 </repository>
 </distributionManagement>
 </project>
