--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.2
+ </modelVersion>
   <groupId>com.web.cal</groupId>
   <artifactId>WebAppCal</artifactId>
   <packaging>war</packaging>
@@ -24,7 +25,7 @@
 <distributionManagement>
   <repository>
     <id>releases</id>
-       <url>http://18.223.188.180:8081/nexus/content/repositories/releases</url>
+        <url>http://18.216.183.87:8081/nexus/content/repositories/releases</url>
 </repository>
 </distributionManagement>
 </project>
