--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.web.cal</groupId>
   <artifactId>WebAppCal</artifactId>
   <packaging>war</packaging>
-  <version>0.3.5:wq</version>
+  <version>0.3.6</version>
   <name>WebAppCal Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -24,7 +24,7 @@
 <distributionManagement>
   <repository>
     <id>releases</id>
-         <url>http://3.143.207.241:8081/nexus/content/repositories/releases</url>
+         <url>http://3.143.68.35:8081/nexus/content/repositories/releases</url>
 </repository>
 </distributionManagement>
 </project>
